# UniOtagoCourseWork

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  INFO410.Editor.csproj  INFO410.csproj  INFO410.sln  INFO490_Testing.Editor.csproj  INFO490_Testing.Player.csproj  INFO490_Testing.csproj  INFO490_Testing.sln  MyCreature (copy).java  README.md  RasterEngine.cpp  SimplePly.cpp  SimplePly.h  VoxelEnivronment.sln  VoxelEnviroment.CSharp.Editor.csproj  VoxelEnviroment.CSharp.csproj  VoxelEnviroment.Editor.csproj  VoxelEnviroment.csproj  VoxelEnviroment.sln  VoxelEnviroment.userprefs  asgn_algorithm.c  asgn_script.c  build.xml  calibration.c  carl.c  cmd_parser.cpp  cmd_parser.hpp  hardCode.c  plane.cpp  plane.hpp  planeFinder.cpp  pseudo.txt  ransac.cpp  ransac.hpp  test.cpp  towerFinder.c  towerTest.c
Animation/: Penguin Animation - Copy.blend  Penguin Animation - Copy.blend1  Penguin Animation.blend1  Walk Cycle (N).blend  Walk Cycle (N).blend1  penguin-looking.blend  penguin-looking.blend1
Animation/Base File/: Scene File (Ramp).blend  Scene File (Ramp).blend1  Scene File.blend  Scene File.blend1  Template.blend  Template.blend1
Animation/Camera Animation/: ._Scene 5 (Looking).blend  ._Scene 6 (Looking At Hand).blend  ._Scene 6 (hand looking copied).blend  ._Scene 6 (hand looking copied).blend1  ._Scene 6 (hand looking).blend  ._Scene 6 (hand looking).blend1  ._Scene 6.blend  ._Scene 6.blend1  ._Scene 7,8,9 (Flapping) copy.blend1  ._Scene 7,8,9 (Flapping).blend  ._Scene 7,8,9 (Flapping).blend1  ._scene of birds flying  Scene 5 (Looking).blend  Scene 6 (Looking At Hand).blend  Scene 6 (Looking At Hand).blend1  Scene 6 (hand looking copied).blend  Scene 6 (hand looking).blend  Scene 6 (hand looking).blend1  Scene 6.blend  Scene 6.blend1  Scene 7,8,9 (Flapping).blend  Scene 7,8,9 (Flapping).blend1  Scene 7,8,9 (falling ground shoot) copy.blend
Animation/Character Animation/: 01. Character Animation.blend  01. Character Animation.blend1  Character Animation.blend  Character Animation.blend1
Animation/Key Frames/: penguin-looking.blend1
Animation/Walk Cycle/: Penguin Animation.blend  Penguin Animation.blend1
Arthimetic/: Arithmetic.java  Main.java
Assets/: SCENE.unity  Trigger.cs  WSATestCertificate.pfx  lamp.skp
Assets/Materials/: Bookshelf 1-0130_Gainsboro.mat  Bookshelf 2-0130_Gainsboro.mat  Bookshelf 3-0130_Gainsboro.mat  Bookshelf 4-0130_Gainsboro.mat  Bookshelf 5-0130_Gainsboro.mat  (+64 more)
Charts/: best_result
ColorOfTheDay/: ColorOfTheDay.java
Cubes/: COSC 326 - Etude 3 [Cubes].docx
Good Examples/: Best 0.5 Noisy Cube.ply
I Before E/: PlayIce.java  PlayIceApp.java  input.txt
Iota/: ._iota  Iota-Report.docx  Project-Diary.docx
Loyalty Coordinator/: build.xml
Loyalty Service Client/: build.xml
LoyaltyService/: build.xml
Pentominoes/: ._Board.java  Board.java  DancingLinksX.java  Main.java  Node.java  Pentomino.java  Point.java  pentominoes  puzzles  starters.txt  startersRTS.txt  test
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
QuiltingBee/: 8  DisplayPanel.java  Main.java  Square.java  testdata2  testdata3  testdata6
Rollin/: Rollin.java
SalesAggregationService/: build.xml
SharedResources/: build.xml
Skeleton/: ._orig_02_-_Defaul1noCulling.dds  ._renderApp.cpp  ._uvmap.DDS
SketchUp Models/: Bookshelf 1.skb  Bookshelf 2.skb  Bookshelf 3.skb  Bookshelf 3.skp  Bookshelf 4.skb  Bookshelf 5.skb  Bookshelf 6.skb  Bookshelf 6.skp  Bookshelf 7.skb  Bookshelf 7.skp  Bookshelf Template 2.skb  Bookshelf Template 2.skp  Bookshelf Template.skb  Bookshelf Template.skp  Bookshelf v2 - 2.skb  Bookshelf v2 1.skb  Chris Table.skb  Chris Table.skp  Large Desk (With Fatter Legs).skp  Large Desk.skb  Medium Desk.skb  Medium Desk.skp  Small Desk.skb  Small Desk.skp  Table Top Template.skp  White Table Template.skb  White Table Template.skp  White Table.skb  White Table.skp
TODO/: BruteForceController.cs  Voxel.cs
UWP/: project.lock.json
arithmetic/: Arithmetic.java  ArithmeticTree.java  Main.java  OperationNode.java  operations  testdata
common/: ._Controls.hpp  ._Group.cpp  ._Group.hpp  ._MTLShader.cpp  ._Material.cpp  ._Material.hpp  ._Mesh.cpp  ._Object.cpp  ._Object.hpp  ._PostProcessingShader.hpp  ._Scene.cpp  ._Shader.cpp  ._Shader.hpp  ._SimpleObjloader.hpp  ._Texture.hpp  ._TextureShader.cpp  ._Triangle.cpp  ._quaternion_utils.hpp  ._text2D.hpp  ._vboindexer.hpp
countup/: CountUp.java
documents/: log_of_problems
includes/: Camera.hpp  Group.hpp  MTLShader.hpp  Material.hpp
joinup/: JoinUp.java  JoinUpDict.java  WordChainComparer.java
maze/: ._Maze.java  Direction.java  Etude 13 - Coroutine Maze.docx  FalveyMaze.java  Main.java  Maze.java  Move.java  Penny.java  Position.java  Spot.java  maze1  maze2  maze3  maze4
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
numbers/: Etude 6_ Numbers.docx  Main.java  NumbersMath.Java  NumbersMath.java
quilting_bee/: DisplayPanel.java  Main.java  Position.java  Square.java  testdata4  testdata5  testdata7
src/: Chromosome.java  MyCreature.java  MyWorld.java  RNN.java
srcs/: CMDParser.cpp  Camera.cpp  Controls.cpp  Group.cpp  MTLShader.cpp  Material.cpp  Mesh.cpp  Object.cpp  Objloader.cpp  Shader.cpp  Texture.cpp
telephone/: Main.java  Main.java~  TelephoneFormatter.java  output  output2  test  testdata.txt  test~
test1_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
test_data/: 10_noise_plane.ply  1_noise_plane.ply  2.5_noise_plane.ply  5_noise_plane.ply  plane.ply
testcode/: hardCode-PathCorrect.c  hardCode.c  pseudo.txt  sonar.c  towerTest.c
threes/: Main.java
(+429 files in other folders)
